<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/backgroundchampion"
    android:contentDescription="@string/ivChampion"
    android:padding="8dp">

    <ImageView
        android:id="@+id/ivChampion"
        android:layout_width="100dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/ivChampion"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="@+id/tvTypeTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvNameTitle"
        app:layout_constraintStart_toEndOf="@+id/ivChampion"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/tvNameTitle"
        app:layout_constraintTop_toTopOf="@+id/tvNameTitle" />

    <TextView
        android:id="@+id/tvTypeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tvTypeTitle"
        app:layout_constraintStart_toStartOf="@+id/tvNameTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvNameTitle"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvType"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toTopOf="@+id/tvTypeTitle" />

    <TextView
        android:id="@+id/tvRoleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvRoleTitle"
        app:layout_constraintStart_toEndOf="@+id/tvName"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvRole"
        android:layout_width="60dp"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvDifficulty"
        app:layout_constraintTop_toTopOf="@+id/tvRoleTitle" />

    <TextView
        android:id="@+id/tvDifficultyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tvDifficulty"
        app:layout_constraintStart_toStartOf="@+id/tvRoleTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvRoleTitle"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvDifficulty"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvDifficultyTitle" />

    <TextView
        android:id="@+id/tvUrlTitle"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvUrlTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivChampion"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvUrl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvUrlTitle"
        app:layout_constraintTop_toTopOf="@+id/tvUrlTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>